# db25-sql-parser

./: .gitignore  .gitmodules  ARCHITECTURAL_ASSESSMENT.md  CMakeLists.txt  LICENSE  PARSER_GAPS_ANALYSIS.md  README.md  ast_dump.txt  ast_dumper  build.sh  ebnf_complete.sql  ebnf_supported.sql  edge_cases_test  performance_test  test_crc32_support
.github/workflows/: ci.yml
benchmarks/: bench_parser.cpp
bugs/: showcase_output.txt
cmake/: DB25ParserConfig.cmake.in  FetchTokenizer.cmake  TestHelpers.cmake
dev/: DEVELOPMENT_LOG.md
docs/: ARCHITECTURE.md  ARCHITECTURE_CONSOLIDATED.md  ARENA_README.md  AST_DESIGN_DECISION.md  AST_Design_Column_References.aux  AST_Design_Column_References.md  AST_Design_Column_References.out  AST_Design_Column_References.tex  AST_Design_Column_References.toc  AST_NOTES.md  BUILD_INSTRUCTIONS.md  CLAUSE_SEPARATION_ANALYSIS.md  DEVELOPER_GUIDE.md  EBNF_COVERAGE_REPORT.md  EXCEPTION_HANDLING_PHILOSOPHY.md  EXHAUSTIVE_TODO.md  GAP_ANALYSIS.md  GITHUB_READY.md  KNOWN_ISSUES.md  MIGRATION_GUIDE.md  MISSING_INTERMEDIATE_HANDLERS.md  Makefile  NEXT_STEPS.md  ORIGINAL_DESIGN.md  PARSER_ASSESSMENT.md  PARSER_COMPARISON.md  PARSER_DESIGN_FINAL.md  PARSER_PROGRESS.md  PARSER_REFACTORING_PLAN.md  PARSER_STATUS_REPORT.md  PARSER_TEST_SPECIFICATION.md  PERFORMANCE.md  PROJECT_LAYOUT.md  PROJECT_SUMMARY.md  README.md  SEMANTIC_REFACTORING_ANALYSIS.md  SQL_SUPPORT.md  TESTING.md  TESTING_GUIDE.md  TESTING_GUIDE_COMPLETE.md  (+9 more)
docs/architecture/: SEPARATION_OF_CONCERNS.md
docs/archive/: ARCHITECTURAL_SOLUTION.md  DDL_IMPLEMENTATION_COMPLETE.md  DEPTHGUARD_IMPLEMENTATION.md  DML_DDL_ANALYSIS.md  FAILED_TESTS_ANALYSIS.md  FIXES_SUMMARY.md  GRAMMAR_GAP_ANALYSIS.md  TEST_REPORT_CONSOLIDATED.md  TEST_RESULTS_SUMMARY.md
docs/assessment/: ARCHITECTURAL_ASSESSMENT.md  CTE_FIX_ASSESSMENT.md  END_TO_END_REPORT.md  FINAL_ASSESSMENT.md  PERMISSIVENESS_EXPLANATION.md  VALIDATION_SUMMARY.md
docs/design/: AST_DESIGN.md  AST_VISUALIZATION_DESIGN.md  AST_VIZ_ADVANCED.md  CTE_STATE_MACHINE_DESIGN.md  DESIGN.md  GRAMMAR_STRATEGY.md  INTERFACE_DESIGN.md  MEMORY_DESIGN.md
grammar/: DB25_SQL_GRAMMAR.ebnf
include/db25/ast/: ast_node.hpp  node_types.hpp
include/db25/memory/: FROZEN_DO_NOT_MODIFY.md  arena.hpp
include/db25/parser/: parser.hpp  tokenizer_adapter.hpp
scripts/: README.md  generate_ast_artifacts.sh
src/ast/: ast_node.cpp
src/memory/: arena.cpp
src/parser/: BACKUP_CHECKSUMS.txt  parser.cpp  parser.cpp.backup  parser.cpp.backup.safe  parser.cpp.bak  parser.cpp.bak2  parser_ddl.cpp  parser_dml.cpp  parser_expressions.cpp  parser_internal.hpp  parser_select.cpp  parser_statements.cpp  tokenizer_adapter.cpp
tests/: comprehensive_sql_tests.sql  debug_query5.txt  dump_complex_ast.cpp  enhanced_all_queries.txt  enhanced_output.txt  enhanced_query5.txt  final_all_queries.txt  final_query5.txt  fixed_query5.txt  run_tests.sh  showcase_output.txt  showcase_output_final.txt  showcase_output_fresh.txt  showcase_queries.sqls  sql_test.sqls  test_advanced_types.cpp  test_arena.cpp  test_ast.cpp  test_ast_comprehensive.cpp  test_ast_dump.cpp  test_ast_improvements.cpp  test_ast_lifetime.cpp  test_ast_v2_layout.cpp  test_ast_verification.cpp  test_case_expr.cpp  test_complex_queries_ast.cpp  test_context_hints.cpp  test_cte.cpp  test_ddl_statements.cpp  test_debug_token_flow.cpp  test_edge_cases.cpp  test_group_by.cpp  test_join_comprehensive.cpp  test_join_parsing.cpp  test_parser_basic.cpp  test_parser_capabilities.cpp  test_parser_comprehensive.cpp  test_parser_correctness.cpp  test_parser_correctness_round2.cpp  test_parser_dml.cpp  (+20 more)
tests/arena/: CMakeLists.txt  test_arena_basic.cpp  test_arena_edge.cpp  test_arena_stress.cpp
tests/artifacts/ast/: 01_analytical_window.dot  02_recursive_cte.dot  03_correlated_subquery.dot  04_set_operation.dot  05_dml_insert.dot  README.md
tests/features/: test_5_fixes.cpp  test_cast_debug.cpp  test_cast_debug2.cpp  test_ebnf_complete.cpp  test_extract_debug.cpp  test_extract_debug2.cpp
tests/performance/: test_prefetch_performance.cpp  test_simd_usage.cpp
tests/security/: test_depth_guard.cpp
tools/: ast_dumper.cpp  ast_to_dot.cpp  ast_viewer.cpp_bak  ast_viewer_enhanced.cpp  dump_complex_ast.cpp
